--- a/instapet-deployment/instapet-web.yaml
+++ b/instapet-deployment/instapet-web.yaml
@@ -2,28 +2,28 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    service: reverseproxy
-    version: v2
-  name: reverseproxy
+    service: instapet-web
+  name: instapet-web
 spec:
   replicas: 2
   template:
     metadata:
       labels:
-        service: reverseproxy
-        version: v2
+        service: instapet-web
+        api: external        
     spec:
       containers:
-      - image: nguyendk82/reverseproxy
-        name: reverseproxy
+      - image: nguyendk82/instapet-web:local
+        name: frontend
         imagePullPolicy: Always          
+        ports:
+        - containerPort: 80
         resources:
           requests:
             memory: "64Mi"
             cpu: "250m"
           limits:
             memory: "1024Mi"
-            cpu: "500m"       
-        ports:
-        - containerPort: 8080
+            cpu: "500m"                
       restartPolicy: Always
+
