--- a/.travis.yaml
+++ b/.travis.yaml
@@ -18,4 +18,4 @@ before_install:
 
 
 install:
-  - docker-compose -f ./docker-compose-build.yaml build --parallel 
+  - docker-compose -f docker-compose-build.yaml build --parallel 
