--- a/instapet-deployment/instapet-feed-service.yaml
+++ b/instapet-deployment/instapet-feed-service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: backend-user
-  name: backend-user
+    service: instapet-feed
+  name: instapet-feed
 spec:
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
   selector:
-    service: backend-user
+    service: instapet-feed
