--- a/instapet-deployment/instapet-user-service.yaml
+++ b/instapet-deployment/instapet-user-service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: backend-feed
-  name: backend-feed
+    service: instapet-user
+  name: instapet-user
 spec:
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
   selector:
-    service: backend-feed
+    service: instapet-user
