--- a/instapet-deployment/instapet-web-service.yaml
+++ b/instapet-deployment/instapet-web-service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: frontend
-  name: frontend
+    service: instapet-web
+  name: instapet-web
 spec:
   ports:
   - name: "8100"
     port: 8100
     targetPort: 80
   selector:
-    service: frontend
+    service: instapet-web
 #  type: LoadBalancer    
