--- a/instapet-proxy/nginx.conf
+++ b/instapet-proxy/nginx.conf
@@ -8,11 +8,11 @@ http {
     sendfile on;
 
     upstream user {
-        server backend-user:8080;
+        server instapet-user:8080;
     }
 
     upstream feed {
-        server backend-feed:8080;
+        server instapet-feed:8080;
     }
     
     proxy_set_header   Host $host;
