--- a/instapet-user/package.json
+++ b/instapet-user/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "udacity-c2-restapi",
+  "name": "instapet-user",
   "version": "1.0.0",
-  "description": "",
+  "description": "a authentication service that use aws cognito to manage users and authentication",
   "main": "src/server.js",
   "scripts": {
     "start": "node .",
@@ -19,7 +19,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.2",
     "aws-sdk": "^2.429.0",
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.18.3",
     "email-validator": "^2.0.4",
     "express": "^4.16.4",
