--- a/instapet-deployment/env-secret.yaml
+++ b/instapet-deployment/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRESS_USERNAME: ___INSERT_POSTGRESS_USERNAME__BASE64___
-  POSTGRESS_PASSWORD: ___INSERT_POSTGRESS_PASSWORD__BASE64___
+  POSTGRESS_USERNAME: cGVraW5kYWRtaW4=
+  POSTGRESS_PASSWORD: Skt0aHJpdmVzITE5ODIxOTgz
