--- a/.travis.yaml
+++ b/.travis.yaml
@@ -21,7 +21,9 @@ install:
   - docker-compose -f docker-compose-build.yaml build --parallel 
 
 deploy:
-  - docker push nguyendk82/instapet-feed
-  - docker push nguyendk82/instapet-user
-  - docker push nguyendk82/reverseproxy
-  - docker push nguyendk82/instapet-web:local
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker push nguyendk82/instapet-feed
+    docker push nguyendk82/instapet-user
+    docker push nguyendk82/reverseproxy
+    docker push nguyendk82/instapet-web:local
+    fi
