--- a/instapet-deployment/instapet-feed-B.yaml
+++ b/instapet-deployment/instapet-feed-B.yaml
@@ -3,9 +3,9 @@ kind: Deployment
 metadata:
   labels:
     service: instapet-feed
-  name: instapet-feed
+  name: instapet-feed-B
 spec:
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
